Frontend checkbox alignment fix

--- a/frontend/src/styles/components/_sign-up.scss
+++ b/frontend/src/styles/components/_sign-up.scss
@@ -34,8 +34,9 @@
         display: inline-block;
         width: 16px;
         height: 16px;
-        //float: left;
+        float: left;
         margin: 5px 10px 0 0;
+        vertical-align: top;
 
         @include mq('mobile') {
             width: 15px;
